댓글 기능 추가

--- a/_includes/head/links-static.html
+++ b/_includes/head/links-static.html
@@ -25,10 +25,11 @@
   <noscript><link rel="stylesheet" href="{{ katex_url }}"></noscript>
 {% endif %}
 
-{% if site.comments.provider == "disqus" and site.disqus %}
-  <link rel="dns-prefetch" href="https://{{ disqus }}.disqus.com" id="_hrefDisqus">
-{% endif %}
 
+{% assign disqus = site.disqus | default:site.disqus_shortname %}
+{% if disqus %}
+<link rel="dns-prefetch" href="https://{{ disqus }}.disqus.com" id="_hrefDisqus">
+{% endif %}
 
 <!-- ... -->  <!-- For sidebar folder --> 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
