--- a/_includes/my-comments.html
+++ b/_includes/my-comments.html
@@ -39,18 +39,27 @@
 {% elsif provider == "giscus" %}
   {% assign giscus = site.giscus %}
   {% if giscus.repo %}
-    <script src="https://giscus.app/client.js"
+    <!-- <script src="https://giscus.app/client.js"
             data-repo={{ giscus.repo }}
             data-repo-id={{ giscus.repo-id }}
             data-category={{ giscus.category }}
             data-category-id={{ giscus.category-id }}
             data-mapping={{ giscus.mapping }}
             data-reactions-enabled={{ giscus.reaction-enabled }}
-            data-emit-metadata={{ giscus.data-emit-metadata }}
             data-theme={{ giscus.theme }}
-            data-lang={{ giscus.data-lang }}
             crossorigin={{ giscus.crossorigin }}
             async>
+    </script> -->
+    <script src="https://giscus.app/client.js"
+    data-repo="{{ site.giscus.repo }}"
+    data-repo-id="{{ site.giscus.repo-id }}"
+    data-category="{{ site.giscus.category }}"
+    data-category-id="{{ site.giscus.category-id }}"
+    data-mapping="{{ site.giscus.mapping }}"
+    data-reactions-enabled="{{ site.giscus.reaction-enabled }}"
+    data-theme="{{ site.giscus.theme }}"
+    crossorigin="{{ site.giscus.crossorigin }}"
+    async>
     </script>
   {% endif %}
 {% endif %}
