검색 기능 추가

--- a/_includes/head/meta.html
+++ b/_includes/head/meta.html
@@ -20,3 +20,10 @@
 {% unless site.hydejack.no_theme_color %}
   <meta name="theme-color" content="{{ theme_color | default:'rgb(8,46,57)' }}">
 {% endunless %}
+
+ <!-- tipuesearch -->
+ <link rel="stylesheet" href="/assets/tipuesearch/css/tipuesearch.css">
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+ <script src="/assets/tipuesearch/tipuesearch_content.js"></script>
+ <script src="/assets/tipuesearch/tipuesearch_set.js"></script>
+ <script src="/assets/tipuesearch/tipuesearch.min.js"></script>
