--- a/_includes/body/menu.html
+++ b/_includes/body/menu.html
@@ -1,12 +1,47 @@
+
+<!-- <div id="_navbar" class="navbar fixed-top">
+  <div class="content">
+      <span class="sr-only">{{ site.data.strings.jump_to | default:"Jump to" }}{{ site.data.strings.colon | default:":" }}</span>
+      <div class="nav-btn-bar">
+          <a id="_menu" class="nav-btn no-hover" href="#_drawer--opened">
+          <span class="sr-only">{{ site.data.strings.navigation | default:"Navigation" }}</span>
+          <span class="icon-menu"></span>
+          </a>          
+          <div class="nav-span">
+            <form action="/search">
+                <div class="tipue_search_left">
+                  <img src="/assets/tipuesearch/search.png" class="tipue_search_icon">
+                </div>
+                <div class="tipue_search_right">
+                  <input type="text" name="q" id="tipue_search_input" pattern=".{1,}" title="At least 1 characters" required></div>
+                <div style="clear: both;"></div>
+              </form>
+          </div>
+          
+      </div>
+  </div>
+</div>
+<hr class="sr-only" hidden /> -->
+
+<!--상단메뉴바-->
 <div id="_navbar" class="navbar fixed-top">
   <div class="content">
     <span class="sr-only">{{ site.data.strings.jump_to | default:"Jump to" }}{{ site.data.strings.colon | default:":" }}</span>
     <div class="nav-btn-bar">
-      <a id="_menu" class="nav-btn no-hover" href="#_drawer--opened">
+        <a id="_menu" class="nav-btn no-hover" href="#_drawer--opened">
         <span class="sr-only">{{ site.data.strings.navigation | default:"Navigation" }}</span>
         <span class="icon-menu"></span>
-      </a>
-      <div class="nav-span"></div>
+        </a>          
+        <!--검색 tipuesearch -->
+
+        <div class="nav-span search-container">
+            <form action="/search">
+                <div class="tipue_search_right">
+                  <input type="text" name="q" id="tipue_search_input" pattern=".{1,}" title="At least 1 characters" required>
+                  <img src="/assets/tipuesearch/search.png" class="tipue_search_icon">
+                </div>
+            </form>
+        </div>
     </div>
   </div>
 </div>
