Post, 이미지캡션 추가

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -23,3 +23,10 @@
 .giscus-frame {
   border: none;
 }
+
+img + em {
+  display: block;
+  text-align: center;
+  font-size: .8rem;
+  color: light-grey;
+}
